--- a/src/main/webapp/portfolio.html
+++ b/src/main/webapp/portfolio.html
@@ -11,7 +11,7 @@
     <div class="container">
         <header>
            <img src="my" alt="" height="300px" width="300px">
-            <h1>Welcome to  My Portfolio</h1>
+            <h1>Welcome to  My Site</h1>
         </header>
         <main>
             <h2>Hello, I'm</h2>
